--- a/app/templates/policy.html
+++ b/app/templates/policy.html
@@ -1,117 +1,121 @@
 <html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/cpapi.css') }}?v=1.0.0">
-        <link rel="shortcut icon" href="{{ url_for('static', filename='cpapi.ico') }}">
-        <script src="{{url_for('static', filename='js/cpapi.js')}}"></script>
-    </head>
-        <body>
-            {% block navbar %}
-            {{nav.postauth.render()}}
-            {% endblock %}
-            <div class="content">
-                <div class="policyform">
-                    <form action="" method="post" name="showrules">
-                        <label><b>Rulebase</b></label>
-                        <select name="layer">
-                            {% for layer in alllayers %}
-                                {% if layer[1] == lastlayer %}
-                                    <option value="{{ layer[1] }}" selected>{{ layer[0] }}</option>
-                                {% else %}
-                                    <option value="{{ layer[1] }}">{{ layer[0] }}</option>
-                                {% endif %}
-                            {% endfor %}
-                        </select>
-                        <input type="submit" value="Submit">
-                    </form>
-                </div>
-                {% if rulebase %}
-                    <br>
-                    <div class="rulesearch">
-                        <label><b>Search Rulebase</b></label>
-                        <input id="searchstring" type="text" name="search" onchange="rulesearch()">
-                    </div>
-                    <br>
-                    <div class="ruletable">
-                        <table>
-                            <thead>
-                                <th>Number</th>
-                                <th>Name</th>
-                                <th>Source</th>
-                                <th>Destination</th>
-                                <th>Service</th>
-                                <th>Action</th>
-                                <th>Track</th>
-                                <th>Target</th>
-                            </thead>
-                            <tbody id="tbody">
-                            {% for rule in rulebase %}
-                                {% if rule['enabled'] == true %}
-                                <tr>
-                                    <td>{{ rule['number'] }}</td>
-                                {% else %}
-                                <tr class="disabledrule">
-                                    <td>{{ rule['number'] }} X</td>
-                                {% endif %}
-                                    <td>{{ rule['name'] }}</td>
-                                    {% if rule['source-negate'] == true %}
-                                        <td class="negatedcell" background-color="#690019;">
-                                            -----Negated-----<br>
-                                    {% else %}
-                                        <td>
-                                    {% endif %}
-                                        {% for source in rule['source'] %}
-                                            {% if source[0] != 'Any' %}
-                                                <a href="/showobject/{{source[1]}}" target="_blank">{{ source[0] }}</a><br>
-                                            {% else %}
-                                                {{ source[0] }}
-                                            {% endif %}
-                                        {% endfor %}
-                                        </td>
-                                    {% if rule['destination-negate'] == true %}
-                                        <td class="negatedcell" background-color="#690019;">
-                                            -----Negated-----<br>
-                                    {% else %}
-                                        <td>
-                                    {% endif %}
-                                        {% for destination in rule['destination'] %}
-                                            {% if destination[0] != 'Any' %}
-                                                <a href="/showobject/{{destination[1]}}" target="_blank">{{ destination[0] }}</a><br>
-                                            {% else %}
-                                                {{ destination[0] }}
-                                            {% endif %}
-                                        {% endfor %}
-                                        </td>
-                                    {% if rule['service-negate'] == true %}
-                                        <td class="negatedcell" background-color="#690019;">
-                                            -----Negated-----<br>
-                                    {% else %}
-                                        <td>
-                                    {% endif %}
-                                        {% for service in rule['service'] %}
-                                            {% if service[0] != 'Any' %}
-                                                <a href="/showobject/{{service[1]}}" target="_blank">{{ service[0] }}</a><br>
-                                            {% else %}
-                                                {{ service[0] }}
-                                            {% endif %}
-                                        {% endfor %}
-                                        </td>
-                                    <td>{{ rule['action'] }}</td>
-                                    <td>{{ rule['track'] }}</td>
-                                    <td>
-                                    {% for target in rule['target'] %}
-                                        {% if target[0] != 'Policy Targets' %}
-                                            <a href="/showobject/{{target[1]}}" target="_blank">{{ target[0] }}</a><br>
-                                        {% else %}
-                                            {{ target[0] }}
-                                        {% endif %}
-                                    {% endfor %}
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
+  <head>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/cpapi.css') }}?v=1.1.0">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='cpapi.ico') }}">
+    <script src="{{url_for('static', filename='js/cpapi.js')}}"></script>
+  </head>
+    <body>
+      {% include 'postlognav.html' %}
+      <div class="content">
+        <div class="policyform">
+          <form action="" method="post" name="showrules">
+            <label><b>Rulebase</b></label>
+            <select name="layer">
+            {% for layer in alllayers %}
+              {% if layer[1] == lastlayer %}
+              <option value="{{ layer[1] }}" selected>{{ layer[0] }}</option>
+              {% else %}
+              <option value="{{ layer[1] }}">{{ layer[0] }}</option>
+              {% endif %}
+            {% endfor %}
+            </select>
+            <input type="submit" value="Submit">
+          </form>
+        </div>
+        {% if rulebase %}
+        <br>
+        <div class="rulesearch">
+          <label><b>Search Rulebase</b></label>
+          <input id="searchstring" type="text" name="search" onchange="rulesearch()">
+        </div>
+        <br>
+        <div class="ruletable">
+          <table>
+            <thead>
+              <th>Number</th>
+              <th>Name</th>
+              <th>Source</th>
+              <th>Destination</th>
+              <th>Service</th>
+              <th>Action</th>
+              <th>Track</th>
+              <th>Target</th>
+            </thead>
+            <tbody id="tbody">
+            {% for rule in rulebase %}
+              {% if rule['type'] == 'section' %}
+              <tr class="rulesection">
+                <td colspan="8">{{ rule['name'] }}</td>
+              </tr>
+              {% elif rule['type'] == 'rule' %}
+                {% if rule['enabled'] == true %}
+                <tr>
+                  <td>{{ rule['number'] }}</td>
+                {% else %}
+                <tr class="disabledrule">
+                  <td>{{ rule['number'] }} X</td>
                 {% endif %}
-            </div>
-        </body>
+                  <td>{{ rule['name'] }}</td>
+                  {% if rule['source-negate'] == true %}
+                  <td class="negatedcell" background-color="#690019;">
+                      -----Negated-----<br>
+                  {% else %}
+                  <td>
+                  {% endif %}
+                    {% for source in rule['source'] %}
+                      {% if source[0] != 'Any' %}
+                      <a href="/showobject/{{source[1]}}" target="_blank">{{ source[0] }}</a><br>
+                      {% else %}
+                      {{ source[0] }}
+                      {% endif %}
+                    {% endfor %}
+                  </td>
+                  {% if rule['destination-negate'] == true %}
+                  <td class="negatedcell" background-color="#690019;">
+                      -----Negated-----<br>
+                  {% else %}
+                  <td>
+                  {% endif %}
+                    {% for destination in rule['destination'] %}
+                      {% if destination[0] != 'Any' %}
+                      <a href="/showobject/{{destination[1]}}" target="_blank">{{ destination[0] }}</a><br>
+                      {% else %}
+                      {{ destination[0] }}
+                      {% endif %}
+                    {% endfor %}
+                  </td>
+                  {% if rule['service-negate'] == true %}
+                  <td class="negatedcell" background-color="#690019;">
+                      -----Negated-----<br>
+                  {% else %}
+                  <td>
+                  {% endif %}
+                    {% for service in rule['service'] %}
+                      {% if service[0] != 'Any' %}
+                      <a href="/showobject/{{service[1]}}" target="_blank">{{ service[0] }}</a><br>
+                      {% else %}
+                      {{ service[0] }}
+                      {% endif %}
+                    {% endfor %}
+                  </td>
+                  <td>{{ rule['action'] }}</td>
+                  <td>{{ rule['track'] }}</td>
+                  <td>
+                  {% for target in rule['target'] %}
+                    {% if target[0] != 'Policy Targets' %}
+                    <a href="/showobject/{{target[1]}}" target="_blank">{{ target[0] }}</a><br>
+                    {% else %}
+                    {{ target[0] }}
+                    {% endif %}
+                  {% endfor %}
+                  </td>
+                </tr>
+              {% endif %}
+            {% endfor %}
+            </tbody>
+          </table>
+        </div>
+      {% endif %}
+      </div>
+    </body>
 </html>
