--- a/app/templates/commands.html
+++ b/app/templates/commands.html
@@ -1,30 +1,28 @@
 <html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/cpapi.css') }}?v=1.0.0">
-        <link rel="shortcut icon" href="{{ url_for('static', filename='cpapi.ico') }}">
-        <script src="{{url_for('static', filename='js/cpapi.js')}}"></script>
-    </head>
-        <body>
-            {% block navbar %}
-            {{nav.postauth.render()}}
-            {% endblock %}
-            <div class="content">
-                <div class="commandform">
-                    <form action="" method="post" name="command">
-                        <label><b>Target(s)</b></label>
-                        <select multiple name="target">
-                            {% for target in alltargets %}
-                                <option value="{{ target }}">{{ target }}</option>
-                            {% endfor %}
-                        </select>
-                        <label><b>Script</b></label>
-                        <textarea type="text" name="script"></textarea>
-                        <input type="submit" value="Submit">
-                        {% if error %}
-                            <br><span><b>{{ error }}</b></span>
-                        {% endif %}
-                    </form>
-                </div>
+  <head>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/cpapi.css') }}?v=1.1.0">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='cpapi.ico') }}">
+    <script src="{{url_for('static', filename='js/cpapi.js')}}"></script>
+  </head>
+    <body>
+      {% include 'postlognav.html' %}
+      <div class="content">
+        <div class="commandform">
+          <form action="" method="post" name="command">
+            <label><b>Target(s)</b></label>
+            <select multiple name="target">
+              {% for target in alltargets %}
+              <option value="{{ target }}">{{ target }}</option>
+              {% endfor %}
+            </select>
+            <label><b>Script</b></label>
+            <textarea type="text" name="script"></textarea>
+            <input type="submit" value="Submit">
+            {% if error %}
+            <br><span><b>{{ error }}</b></span>
+            {% endif %}
+          </form>
+        </div>
 {% if response %}
 {% for task in response %}
 <br>
@@ -37,6 +35,6 @@ Response:
 </div>
 {% endfor %}
 {% endif %}
-            </div>
-        </body>
+      </div>
+    </body>
 </html>
