--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,33 +1,34 @@
 <html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/cpapi.css') }}?v=1.0.0">
-        <link rel="shortcut icon" href="{{ url_for('static', filename='cpapi.ico') }}">
-        <script src="{{url_for('static', filename='js/cpapi.js')}}"></script>
-    </head>
-        <body>
-            {% block navbar %}
-            {{nav.preauth.render()}}
-            {% endblock %}
-            <div class="content">
-                <div class="header">
-                    <h1>CPAPI - Check Point Web API Tool</h1>
-                </div>
-                <div class="loginform">
-                    <form action="" method="post" name="login">
-                        <label><b>IP Address</b></label>
-                        <input type="text" name="ipaddress">
-                        <label><b>Username</b></label>
-                        <input type="text" name="username">
-                        <label><b>Password</b></label>
-                        <input type="password" name="password">
-                        <label><b>Domain</b></label>
-                        <input type="text" name="domain">
-                        <input type="submit" value="Log In">
-                        {% if feedback %}
-                            <br><span><b>{{ feedback }}</b></span>
-                        {% endif %}
-                    </form>
-                </div>
-            </div>
-        </body>
+  <head>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/cpapi.css') }}?v=1.1.0">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='cpapi.ico') }}">
+    <script src="{{url_for('static', filename='js/cpapi.js')}}"></script>
+  </head>
+    <body>
+      <div class="main-navigation">
+        {% include 'prelognav.html' %}
+      </div>
+      <br>
+      <div class="content">
+        <div class="header">
+          <h1>CPAPI - Check Point Web API Tool</h1>
+        </div>
+        <div class="loginform">
+          <form action="" method="post" name="login">
+            <label><b>IP Address</b></label>
+            <input type="text" name="ipaddress">
+            <label><b>Username</b></label>
+            <input type="text" name="username">
+            <label><b>Password</b></label>
+            <input type="password" name="password">
+            <label><b>Domain</b></label>
+            <input type="text" name="domain">
+            <input type="submit" value="Log In">
+            {% if feedback %}
+            <br><span><b>{{ feedback }}</b></span>
+            {% endif %}
+          </form>
+        </div>
+      </div>
+    </body>
 </html>
